<resources>
    <string name="app_name">HuntForCoffee</string>
    <string name="action_settings">Settings</string>
    <string name="b0_string">b0</string>
    <string name="b1_string">b1</string>
    <string name="b2_string">b2</string>
    <string name="b3_string">b3</string>
    <string name="b4_string">b4</string>
    <string name="b5_string">b5</string>
    <string name="b6_string">b6</string>
    <string name="b7_string">b7</string>
    <string name="b8_string">b8</string>
    <string name="b9_string">b9</string>
    <string name="statStr_string">Strength 50</string>
    <string name="statInt_string">Intelligence 50</string>
    <string name="statAgi_string">Agility 100</string>
    <string name="statQui">Quickness 89</string>
    <string name="statCha">Charisma 55</string>
    <string name="statLuck_string">Luck 30</string>
    <string name="statLi_string">Li 40</string>
    <string name="statHealth_string">Health 100</string>
    <string name="statMana_string">Mana 100</string>
    <string name="statFatigue_string">Fatigue 100</string>
    <string name="statLu_string">Lu 40</string>
    <string name="statLvl_string">Level 2</string>
    <string name="timeDate_string">Time - Date</string>
    <string name="statClass_string">Warrior</string>
    <string name="mainText_string">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, \n\nquis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese\n\nrunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="subText_string">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
</resources>
